--- a/website/newsletter/188/index.mdx
+++ b/website/newsletter/188/index.mdx
@@ -8,13 +8,11 @@ unlisted: true
 
 Hey,
 
-this is Benedikt, filling in for Sébastien this week who’s on a well-deserved vacation (right after releasing Docusaurus 3.4). React 19 is nearing its final release, with the first RC published this week. Apart from this, there’s not a lot of release activity in the React and React Native communities. So this week, I decided to feature two great pieces of content as headlines in both sections. A seminal 10k-word-long article about Data Fetching Patterns in Single-Page Applications by Juntao Qiu, and a great video overview of all the different ways to build React Native apps with Expo by Simon Grimm.
+This is [Benedikt](https://twitter.com/bndkt) this week, filling in for Sébastien who’s taking a newsletter break.
+
+React 19 is nearing its final release, with the first RC published this week. Apart from this, there’s not a lot of release activity in the React and React Native communities. So this week, I decided to feature two great pieces of content as headlines in both sections. A seminal 10k-word-long article about Data Fetching Patterns in Single-Page Applications by Juntao Qiu, and a great video overview of all the different ways to build React Native apps with Expo by Simon Grimm.
 
 I wanted to use this opportunity to let you know that both Sébastien and I put a lot of effort into finding the best content for the React and React Native sections, but I’m sure there is still great stuff that sometimes goes unnoticed. That’s why we’re always open to suggestions, so feel free to let us know when you put something out there!
-
-<Todo />
-
-check notJustdev ad
 
 <!-- truncate -->
 
@@ -92,8 +90,6 @@ Future-proof your auth stack with [WorkOS](https://workos.com/?utm_source=thiswe
 ---
 
 ## 📱 React-Native {#react-native}
-
-This section is authored by [Benedikt](https://twitter.com/bndkt).
 
 ![Simon Grimm: Build React Native with Expo](/emails/issues/188/rn188.jpg)
 
