--- a/website/newsletter/188/index.mdx
+++ b/website/newsletter/188/index.mdx
@@ -129,6 +129,6 @@ Many roads lead to Rome, and it seems there are almost as many ways to build an 
 
 ## 🤭 Fun {#fun}
 
-[![Thank you JavaScript](/emails/issues/188/fun188.jpg)](https://x.com/fireship_dev/status/1796526654183059925)
+[![Thank you JavaScript](/emails/issues/188/meme.jpg)](https://x.com/fireship_dev/status/1796526654183059925)
 
 See ya! 👋
