--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/188/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/188/index.mdx
@@ -9,9 +9,9 @@ Bonjour,
 
 Cette semaine, c'est [Benedikt](https://twitter.com/bndkt) qui remplace Sébastien, qui fait une pause dans sa newsletter.
 
-React 19 is nearing its final release, with the first RC published this week. Apart from this, there’s not a lot of release activity in the React and React Native communities. So this week, I decided to feature two great pieces of content as headlines in both sections. A seminal 10k-word-long article about Data Fetching Patterns in Single-Page Applications by Juntao Qiu, and a great video overview of all the different ways to build React Native apps with Expo by Simon Grimm.
+React 19 approche de sa version finale, avec la première RC publiée cette semaine. En dehors de cela, il n'y a pas beaucoup d'activité de nouvelle version dans les communautés React et React Native. Cette semaine, j'ai donc décidé de présenter deux contenus importants en gros titres dans les deux sections. Un article de référence de 10 000 mots sur les modèles de récupération de données dans les applications Single-Page par Juntao Qiu, et un excellent aperçu vidéo de toutes les différentes façons de construire des applications React Native avec Expo par Simon Grimm.
 
-I wanted to use this opportunity to let you know that both Sébastien and I put a lot of effort into finding the best content for the React and React Native sections, but I’m sure there is still great stuff that sometimes goes unnoticed. That’s why we’re always open to suggestions, so feel free to let us know when you put something out there!
+Je voulais profiter de cette occasion pour vous dire que Sébastien et moi-même faisons beaucoup d'efforts pour trouver le meilleur contenu pour les sections React et React Native, mais je suis sûr qu'il y a encore d'excellentes choses qui passent parfois inaperçues. C'est pourquoi nous sommes toujours ouverts aux suggestions, alors n'hésitez pas à nous faire savoir si vous avez quelque chose à nous proposer !
 
 <!-- truncate -->
 
@@ -41,26 +41,26 @@ import Support from "../_support.mdx";
 
 📜 **[Data Fetching Patterns in Single-Page Applications](https://martinfowler.com/articles/data-fetch-spa.html)**
 
-This is a long read (~10k words), but such a great article! The title doesn’t do its justice, because in passing, this covers so much more than just data fetching. Basic React concepts, Suspense, async state handling, code splitting, prefetching, and parallel data fetching to avoid waterfalls. There has been a lot of discussion on X about web app performance in the last few weeks (Rails vs. React, MS Edge decision, …) - this is a great article to freshen up the basics of this topic to build a great user experience!
+C'est une longue lecture (~10 000 mots), mais c'est un excellent article ! Le titre ne lui fait pas honneur, parce qu'au passage, il couvre bien plus que le simple data fetching. Les concepts de base de React, Suspcense, la gestion de l'état asynchrone, le découpage du code, le prefetching, et la récupération de données en parallèle pour éviter les waterfalls. Il y a eu beaucoup de discussions sur X à propos de la performance des web apps ces dernières semaines (Rails vs. React, MS Edge decision, ...) - c'est un excellent article pour rappeler les bases de ce sujet afin de construire une excellente expérience utilisateur !
 
 - 💸 [Meilisearch - Build search as you type for React](https://www.meilisearch.com/with/react?utm_campaign=sponsoring&utm_source=thisweekinreact)
 - 👀 [React Router PR - defineRoute API](https://github.com/remix-run/react-router/pull/11596)
 - 🐦 [shadcn/ui is working on adding charts](https://x.com/shadcn/status/1795920488797188525)
 - 🐦 [Remix working inside a Cloudflare Durable Object 🤯](https://x.com/threepointone/status/1796223745243119890)
-- 🐦 [React 19.0.0-rc.0](https://x.com/acdlite/status/1797668537349328923): Andrew Clark says “This is the exact build we'll release as 19.0, unless an issue is reported that requires a breaking change.”
+- 🐦 [React 19.0.0-rc.0](https://x.com/acdlite/status/1797668537349328923) : Andrew Clark déclare « C'est la version exacte que nous publierons en tant que 19.0, sauf si un problème est signalé nécessitant un changement radical ».
 - 🐦 [Upcoming Spline (3D rendering) and NextJS RSC integration](https://x.com/rauchg/status/1798021886657650711)
-- 📜 [I tried React Compiler today, and guess what …](https://www.developerway.com/posts/i-tried-react-compiler): A super interesting and detailed article about React Compiler and real-world use cases. Seems like we’re not at the point yet where we can just ignore everything about memoization because the Compiler takes care of it, and apart from this conclusion the article is also a great reminder of how memoization works exactly.
-- 📜 [Do you still need Framer Motion?](https://motion.dev/blog/do-you-still-need-framer-motion): The creator of the popular React animation library explains you might not need his library anymore thanks to 5 great new/upcoming CSS features.
-- 📜 [Sneaky React Memory Leaks II: Closures Vs. React Query](https://schiener.io/2024-05-29/react-query-leaks): This follows up on last week's great article. This time it shows how React Query might be affected as well by memory leaks, and how to fix them. Using custom hooks looks like a good general solution to this problem.
-- 📜 [An even faster Microsoft Edge](https://blogs.windows.com/msedgedev/2024/05/28/an-even-faster-microsoft-edge/): Microsoft was using React for some elements of the UI in its Edge browser and is now abandoning this approach. See the video linked below for more context.
-- 📜 [Speeding up the JavaScript ecosystem - Server Side JSX](https://marvinh.dev/blog/speeding-up-javascript-ecosystem-part-9/): The JSX runtime of React can lead to many object allocations. Marvin (Preact/Deno) shows it's possible to precompile JSX to improve server rendering of JSX and reduce GC. Maybe React could use that as well?
-- 📜 [Type-safe module mocking in Storybook](https://storybook.js.org/blog/type-safe-module-mocking/): Very elegant way to leverage subpath imports for module mocking.
-- 📜 [Multiple action handlers with Zod in Remix](https://www.jacobparis.com/content/zod-actions-remix): If you target one action endpoint from multiple components, this article shows you how to combine the different Zod schemas via discriminated union.
+- 📜 [I tried React Compiler today, and guess what …](https://www.developerway.com/posts/i-tried-react-compiler) : Un article super intéressant et détaillé sur React Compiler et les cas d'utilisation dans le monde réel. Nous ne sommes pas encore arrivés au point où nous pourrons ignorer tout ce qui concerne la mémoïsation parce que le Compilateur s'en chargera, et en dehors de cette conclusion, l'article est aussi un excellent rappel de la façon dont la mémoïsation fonctionne exactement.
+- 📜 [Do you still need Framer Motion?](https://motion.dev/blog/do-you-still-need-framer-motion) : Le créateur de la célèbre bibliothèque d'animation React explique que vous pourriez ne plus avoir besoin de sa bibliothèque grâce à 5 grandes nouvelles fonctionnalités CSS.
+- 📜 [Sneaky React Memory Leaks II: Closures Vs. React Query](https://schiener.io/2024-05-29/react-query-leaks) : Cet article fait suite à celui de la semaine dernière. Cette fois-ci, il montre comment React Query peut également être affecté par des fuites de mémoire, et comment les corriger. L'utilisation de custom hooks semble être une bonne solution générale à ce problème.
+- 📜 [An even faster Microsoft Edge](https://blogs.windows.com/msedgedev/2024/05/28/an-even-faster-microsoft-edge/) : Microsoft utilisait React pour certains éléments de l'interface utilisateur de son navigateur Edge et abandonne désormais cette approche. Voir la vidéo ci-dessous pour plus de détails.
+- 📜 [Speeding up the JavaScript ecosystem - Server Side JSX](https://marvinh.dev/blog/speeding-up-javascript-ecosystem-part-9/) : Le runtime JSX de React peut conduire à de nombreuses allocations d'objets. Marvin (Preact/Deno) montre qu'il est possible de précompiler JSX pour améliorer le rendu serveur de JSX et réduire le GC (Garbage Collection). Peut-être que React pourrait utiliser cela aussi ?
+- 📜 [Type-safe module mocking in Storybook](https://storybook.js.org/blog/type-safe-module-mocking/) : Une façon très élégante d'exploiter les imports de sous-chemins pour le module de mocking.
+- 📜 [Multiple action handlers with Zod in Remix](https://www.jacobparis.com/content/zod-actions-remix) : Si vous ciblez un endpoint d'action à partir de plusieurs composants, cet article vous montre comment combiner les différents schémas Zod via l'union discriminée.
 - 📜 [Embracing Slow Networks: Improving User Experience](https://www.epicweb.dev/embracing-slow-networks-improving-user-experience)
 - 📜 [Cleaner components with useSuspenseQuery](https://swizec.com/blog/cleaner-components-with-use-suspense-query/) & [Why useSuspenseQuery works](https://swizec.com/blog/why-use-suspense-query-works/)
 - 📜 [Explore new hooks coming up in React 19](https://blog.saeloun.com/2024/06/05/new-hooks-in-react-19/)
-- 📦 [React 19.0.0-rc.0](https://www.npmjs.com/package/react/v/19.0.0-rc.0): Andrew Clark said "This is the exact build we'll release as 19.0, unless an issue is reported that requires a breaking change."
-- 📦 [Docusaurus 3.4](https://docusaurus.io/blog/releases/3.4): A new way to centrally manage tags (great for consistency), an experimental hash router (great for offline browsing without a web server), and an option to use namespaces for local storage (useful if you’re deploying multiple instances of Docusaurus on the same domain).
+- 📦 [React 19.0.0-rc.0](https://www.npmjs.com/package/react/v/19.0.0-rc.0) : Andrew Clark déclare « C'est la version exacte que nous publierons en tant que 19.0, sauf si un problème est signalé nécessitant un changement radical ».
+- 📦 [Docusaurus 3.4](https://docusaurus.io/blog/releases/3.4) : Une nouvelle façon de gérer les tags de façon centralisée (idéal pour la cohérence), un routeur de hash expérimental (idéal pour la navigation hors ligne sans serveur web), et une option pour utiliser les espaces de noms pour le stockage local (utile si vous déployez plusieurs instances de Docusaurus sur le même domaine).
 - 🎙 [This Month in React, May 2024 - Updates from React Conf](https://www.reactiflux.com/transcripts/tmir-2024-05)
 - 🎥 [Jack Herrington - Beware of "auto" Mode in the NextJS App Router](https://www.youtube.com/watch?v=bU3Px8bHjPA)
 - 🎥 [Theo - Microsoft Regrets Using React (For Edge)](https://www.youtube.com/watch?v=Bm8Ga07BOnI)
@@ -99,14 +99,14 @@ Future-proof your auth stack with [WorkOS](https://workos.com/?utm_source=thiswe
 
 🎥 **[Every Way to Build your React Native App with Expo](https://www.youtube.com/watch?v=cs-zgHjt5RQ)**
 
-Many roads lead to Rome, and it seems there are almost as many ways to build an Expo app. This gives us developers a lot of power and freedom, but can also sometimes lead to confusion - not just for beginners! Thankfully, Simon made a great video comparing the different approaches via Expo Go, Expo Prebuild, Xcode, Android Studio, and EAS. This is also a great opportunity to congratulate Expo on reaching [30k stars on GitHub!](https://x.com/expo/status/1796262781584654492)
+Tous les chemins mènent à Rome, et il semble qu'il y ait presque autant de façons de créer une application Expo. Cela nous donne, à nous développeurs, beaucoup de pouvoir et de liberté, mais peut aussi parfois mener à la confusion - et pas seulement pour les débutants ! Heureusement, Simon a réalisé une excellente vidéo comparant les différentes approches via Expo Go, Expo Prebuild, Xcode, Android Studio et EAS. C'est aussi l'occasion de féliciter Expo pour avoir atteint les [30k étoiles sur GitHub !](https://x.com/expo/status/1796262781584654492)
 
 - 💸 [React Native Mastery - The only course you need to Master React Native & Expo](https://notjust.dev/react-native-mastery?utm_source=twir&utm_medium=email)
-- 🐦 [The most powerful demo AI app, featuring RSC via Expo Router](https://x.com/Baconbrix/status/1795804445738963283): We’ve talked about Evan Bacon’s RSC demo before. This is a great thread on X summing up the promise and including a nice comparison video on how great mobile UI can get especially in the context of LLM chat apps.
-- 📜 [React Native Security Guide](https://ospfranco.com/react-native-security-guide/): Oscar picks up a topic that doesn’t get talked about enough. This is a good intro, covering secrets (TLDR: Don’t store them on a device) and encryption of user data (including leveraging biometrics).
-- 📜 [Seamless Transitions: From Native to React Native](https://commerce.nearform.com/blog/2024/seamless-transitions-from-native-to-react-native): Some impulses for brownfield development: Because RN creates truly native apps, introducing RN to an existing app or migrating to RN can be made seamless for the end users.
-- 📦 [React Native 0.74.2](https://github.com/facebook/react-native/releases/tag/v0.74.2): Patch release, bumping some dependencies (typescript-eslint, CLI) and fixing bugs.
-- 📦 [React Native Reanimated 3.12.0](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.12.0): Introduces a new hook useComposedEventHandler which simplifies merging of multiple event handlers.
+- 🐦 [The most powerful demo AI app, featuring RSC via Expo Router](https://x.com/Baconbrix/status/1795804445738963283) : Nous avons déjà parlé de la démo RSC d'Evan Bacon. Il s'agit d'un excellent fil de discussion sur X qui résume les promesses et inclut une belle vidéo de comparaison sur la qualité de l'interface utilisateur mobile, en particulier dans le contexte des applications de chat LLM.
+- 📜 [React Native Security Guide](https://ospfranco.com/react-native-security-guide/) : Oscar aborde un sujet dont on ne parle pas assez. Il s'agit d'une bonne introduction, qui couvre les secrets (TLDR : ne les stockez pas sur un appareil) et le cryptage des données utilisateur (y compris l'exploitation de la biométrie).
+- 📜 [Seamless Transitions: From Native to React Native](https://commerce.nearform.com/blog/2024/seamless-transitions-from-native-to-react-native) : Quelques encouragements pour la réhabilitation d'ancien développement : Comme RN crée des applications véritablement natives, l'introduction de RN dans une application existante ou la migration vers RN peut se faire de manière transparente pour les utilisateurs finaux.
+- 📦 [React Native 0.74.2](https://github.com/facebook/react-native/releases/tag/v0.74.2) : Mise à jour corrective, apportant quelques dépendances (typescript-eslint, CLI) et corrigeant des bugs.
+- 📦 [React Native Reanimated 3.12.0](https://github.com/software-mansion/react-native-reanimated/releases/tag/3.12.0) : Introduction d'un nouveau hook useComposedEventHandler qui simplifie la fusion de plusieurs gestionnaires d'événements.
 - 🎙️ [RNR 298 - Create Expo Stack, NativeWind Ul, & Plugin Pro with Dan Stepanov](https://reactnativeradio.com/episodes/rnr-298-create-expo-stack-nativewind-ul-plugin-pro-with-dan-stepanov)
 - 🎥 [Rocket Ship 42 - React Native is alive! App.js Recap with Áron Berezkin](https://www.youtube.com/watch?v=GeUfrojkoo0)
 - 🎥 [Expo - How to start your first Expo project in 2 minutes](https://www.youtube.com/watch?v=yOUAEfDuI44)
