Add cover image

--- a/website/newsletter/189/index.mdx
+++ b/website/newsletter/189/index.mdx
@@ -39,7 +39,7 @@ import Support from "../_support.mdx";
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![Mind the gap](/emails/issues/189/react189.jpg)](https://www.youtube.com/live/1g5ruM-16_Y?t=7443s)
 
 - 💸 [NL Kit — Ship AI Features Faster With JavaScript](https://nlkit.com)
 
