--- a/website/newsletter/189/index.mdx
+++ b/website/newsletter/189/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /189
-title: "This Week In React #189: ..."
-authors: [slorber]
+title: "This Week In React #189: React State, Typesafe Routes in Remix, Starlight, Next.js Security, Hydrogen, Memoization, useFormStatus, Lingui, Skia Video, Starlink, App Clips"
+authors: [bndkt]
 date: 06-12-2024
 unlisted: true
 ---
